--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <canvas id="gameCanvas" width="600" height="400"> </canvas>
+        <pre id="logs"></pre>
     </body>
 </html>
