--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <canvas id="gameCanvas" width="600" height="400"> </canvas>
-        <button id="toggleLogs" type="button">Show/hide logs</button>
-        <pre id="logs"></pre>
+        <!-- <button id="toggleLogs" type="button">Show/hide logs</button>
+        <pre id="logs"></pre> -->
     </body>
 </html>
