--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
         <title>TowerDefense</title>
     </head>
     <body>
-        <canvas id="gameCanvas" width="600" height="400"> </canvas>
+        <div class="container">
+            <canvas id="gameCanvas" width="600" height="400"></canvas>
+        </div>
         <!-- <button id="toggleLogs" type="button">Show/hide logs</button>
         <pre id="logs"></pre> -->
     </body>
